Suche nach Geräten in der Umgebung

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">SimpleBluetooth</string>
     <string name="bt_not_available">Kein Bluetooth verfügbar!</string>
     <string name="bt_no_paired_devices">Keine gekoppelten Geräte verfügbar!</string>
+    <string name="start_search_device">Start suche Geräte</string>
+    <string name="stop_search_device">Stopp suche Geräte</string>
 </resources>
